coreclient/src/clients/snapshots/aircoreclient__clients__persistence__tests__client_record_serde_json.snap
---
source: coreclient/src/clients/persistence.rs
expression: "&record"
---
{
  "user_id": {
    "uuid": "00000000-0000-0000-0000-000000000001",
    "domain": {
      "domain": {
        "Domain": "localhost"
      }
    }
  },
  "client_record_state": "Finished",
  "created_at": "2025-01-01T00:00:00Z",
  "is_default": false
}
