coreclient/src/clients/snapshots/aircoreclient__clients__persistence__tests__user_creation_state_basic_json_codec.snap
---
source: coreclient/src/clients/persistence.rs
assertion_line: 458
expression: "&*USER_CREATION_STATE_BASIC"
---
{
  "BasicUserData": {
    "user_id": {
      "uuid": "00000000-0000-0000-0000-000000000001",
      "domain": {
        "domain": {
          "Domain": "localhost"
        }
      }
    },
    "push_token": {
      "operator": "Google",
      "token": "token"
    }
  }
}
