coreclient/src/clients/snapshots/aircoreclient__clients__persistence__tests__user_creation_state_basic_serde_codec.snap
---
source: coreclient/src/clients/persistence.rs
assertion_line: 453
expression: diag
---
a1                                           # map(1)
   6d                                        #   text(13)
      42617369635573657244617461             #     "BasicUserData"
   a2                                        #   map(2)
      67                                     #     text(7)
         757365725f6964                      #       "user_id"
      a2                                     #     map(2)
         64                                  #       text(4)
            75756964                         #         "uuid"
         50                                  #       bytes(16)
            00000000000000000000000000000001 #         "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x01"
         66                                  #       text(6)
            646f6d61696e                     #         "domain"
         a1                                  #       map(1)
            66                               #         text(6)
               646f6d61696e                  #           "domain"
            a1                               #         map(1)
               66                            #           text(6)
                  446f6d61696e               #             "Domain"
               69                            #           text(9)
                  6c6f63616c686f7374         #             "localhost"
      6a                                     #     text(10)
         707573685f746f6b656e                #       "push_token"
      a2                                     #     map(2)
         68                                  #       text(8)
            6f70657261746f72                 #         "operator"
         66                                  #       text(6)
            476f6f676c65                     #         "Google"
         65                                  #       text(5)
            746f6b656e                       #         "token"
         65                                  #       text(5)
            746f6b656e                       #         "token"
